[Add max - min width]

--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -3,6 +3,8 @@ body{
     height: 100vh;
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
+    max-width: 1440px;
+    min-width: 375px;
 
 }
 /* container */
