--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -1,53 +1,61 @@
 /* Body */
-body{
+body {
     height: 100vh;
     background-color: hsl(212, 45%, 89%);
-    font-family: 'Outfit', sans-serif;
+    font-family: "Outfit", sans-serif;
     max-width: 1440px;
     min-width: 375px;
-
 }
 /* container */
-.container{
+.container {
     display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
     height: 100vh;
-    
 }
 
 /* card component */
-.card{
+.card {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 1.2rem;
     width: 18rem;
     background-color: hsl(0, 0%, 100%);
     padding: 1rem;
-    box-shadow: 1px 2px 20px 1px rgba(0,0,0,0.10);
+    box-shadow: 1px 2px 20px 1px rgba(0, 0, 0, 0.1);
 }
 
 /* img */
-.qrCode-img{
+.qrCode-img {
     border-radius: 0.6rem;
 }
 
 /* text-body */
-.text-body{
+.text-body {
     padding: 0rem 0.5rem;
 }
 
 /* header2 */
-.header2{
+.header2 {
     color: hsl(218, 44%, 22%);
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
 /* text */
-.text{
+.text {
     color: hsl(220, 15%, 55%);
     font-weight: 300;
-    /* font-size: 15px; */
+    font-size: 1rem;
+}
+
+/* attribution */
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
